fix: badge text nowrap (#258)

--- a/components/badge/index.less
+++ b/components/badge/index.less
@@ -31,6 +31,7 @@
       left: 50%;
       font-size: 20px;
       transform: translate(-50%, -50%) scale(0.5);
+      white-space: nowrap;
     }
 
     &.am-badge-double {
